# StandEngine

./: .trivyignore.yaml  Containerfile  NOTICE  README.md  main.py  pyproject.toml  redpanda-instance.yml.mako  stands-engine  stands-engine.ps1
.github/release-notes/: v0.1.1.md
.github/workflows/: container.yml
App/: __init__.py
InfraBaseLib/: __init__.py
InfraBaseLib/SShExecutor/: __init__.py  diagnostic.py  executor.py  uploder.py
InfraBaseLib/helpers/: cloud_init.py  ssh_key.py
InfraBaseLib/metal_provision/: provision.py
InfraBaseLib/server_designer/: designer.py
InfraBaseLib/templates/: cloud-init.yaml.mako
ManifestParser/: __init__.py  validation.py
SShExecutor/: __init__.py
ShellCollect/: __init__.py
StandBuilder/: __init__.py
StandFramework/: __init__.py
StandFramework/config/: config.py
StandFramework/stand/: stand.py
app-registry/kafka-ui/: kafka-ui.yml.mako
app-registry/mongo/: mongo-instance.yml.mako
app-registry/redis/: redis-instance.yml.mako
app-registry/redpanda/: redpanda-instance.yml.mako
config/: config.py
configset/redpanda--redpanda-master/: redpanda-instance.yml
container/: entrypoint.sh
demo/: cloud-init.yaml.mako  stand.yml
docs/: README.md  application-manifest.md  operations.md  stand-manifest.md
helpers/: base_helpers.py  cloud_init.py  ssh_key.py
server_designer/: designer.py  server.py
tests/: test_agent_apps.py  test_app_resources.py  test_cli.py  test_connection_output.py  test_manifest_secrets.py  test_mongo_hook.py  test_redpanda_hook.py  test_trivy_ignores.py
(+23 files in other folders)
