[project]
name = "stands_engine"
version = "0.1.0"
description = "stands engine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mako==1.3.12",
    "paramiko==4.0.0",
    "pulumi==3.245.0",
    "pulumi-hcloud==1.38.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pyinfra==3.9.2",
    "python-box==7.4.1",
]