[project]
name = "stands-engine"
version = "0.1.0"
description = "stands engine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mako==1.3.12",
    "paramiko==4.0.0",
    "pulumi==3.253.0",
    "pulumi-hcloud==1.39.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "pyyaml==6.0.3",
    "pyinfra==3.9.2",
    "python-box==7.4.1",
]

[project.scripts]
stands-engine = "main:cli"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "App*",
    "config*",
    "InfraBaseLib*",
    "ManifestParser*",
    "ShellCollect*",
    "StandBuilder*",
    "StandFramework*",
]
namespaces = true
